(disk) Update disk application

--- a/applications/advection/2d/disk/example1.ini
+++ b/applications/advection/2d/disk/example1.ini
@@ -1,17 +1,14 @@
 [user]
-     example = 0    # 0 = 5 patch disk
+     example = 1    # 0 = 5 patch disk
      alpha = 0.5    # Ratio of inner disk to outer disk
 
-[Options]
+[clawpatch]
      mx = 8
-     my = 8		# grid dimensions
+     my = 8
 
+[Options]
      minlevel = 2         # Minimum level
      maxlevel = 4         # Maximum levels of refinement
 
      smooth-refine = T
-     refine-level = 3
-
-# Mapping related functions
-     theta = 0
-     phi = 0
+     smooth-level = 3
