--- a/applications/advection/2d/disk/fclaw_options.ini
+++ b/applications/advection/2d/disk/fclaw_options.ini
@@ -2,12 +2,18 @@
      example = 0          # 0 - 5-patch mapping;  1 - pillow disk mapping
      claw-version = 4
 
+
+[clawpatch]
+     # Grid dimensions
+     mx = 8               # mx_leaf
+     my = 8               # my_leaf
+     mbc = 2              # Number of ghost cells
+     maux = 3
+
+     # Equations and boundary conditions
+     meqn = 1             # Number of equations
+
 [Options]
-# Grid dimensions
-     mx = 8
-     my = 8		# grid dimensions
-
-
 # Regridding options
 
      minlevel = 1         # Minimum level
@@ -35,22 +41,27 @@
      subcycle = T       # subcycle in time ( = T or F).
 
 # Equation info
-     meqn = 1             # meqn
-     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
 
 # Diagnostics and debugging
-     conservation-check = F
-     run-user-diagnostics = F
      trapfpe = T          # trap floating point exceptions
      mpi_debug = F
+     conservation-check = F
+     run-user-diagnostics = F
+     compute-error = F
 
 # File and console IO
      verbosity = essential    # verbosity
-     serialout = T            # Works with Matlab
-     vtkout = 0               # Read into VisIt
-     tikzout = F
-     tikz_figsize = 4 4
+     output = T
+
+     # -----------
+     # Tikz output 
+     # -----------
+     tikz-out = F
+     tikz-figsize = 4 4 
+     tikz-plot-prefix = 'plot'
+     tikz-plot-suffix = 'png'
+
 
 # mapping functions
      manifold = T         # Manifold
@@ -68,6 +79,11 @@
 
      mwaves = 1           # mwaves
      mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+
+     # output
+     ascii-out = T
+     vtk-out = F
 
 [clawpack5]
      order  = 2 2         # normal and transverse order
@@ -77,3 +93,9 @@
 
      mwaves = 1           # mwaves
      mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+
+     # output
+     ascii-out = T
+     vtk-out = F
+
