--- a/applications/advection/2d/torus/fclaw_options.ini
+++ b/applications/advection/2d/torus/fclaw_options.ini
@@ -1,8 +1,5 @@
-# -----------------------------------------------------------
-# A periodic example that uses [ax,bx]x[ay,by]
-# -----------------------------------------------------------
 [user]
-     example = 0          # A periodic
+     example = 1          # 0 = torus;  1 = twisted torus
      alpha = 0.4          # Ratio of outer radius to inner radius (torus)
      claw-version = 4
 
@@ -15,17 +12,18 @@
      mx = 8               # Interior dimensions of each grid
      my = 8		      #
      mbc = 2              # Number of ghost cells.
-     maux = 
+     maux = 3
 
 [Options]
 # Regridding options
      minlevel = 0               # Minimum level
      maxlevel = 5               # Maximum levels of refinement
+
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.01
      smooth-refine = T
-     smooth-level = 5
+     smooth-level = 4
      coarsen-delay = 0
 
 
@@ -45,22 +43,24 @@
      advance-one-step = F
      outstyle-uses-maxlevel = F
 
-
-# Equation and boundary conditions
-     meqn = 1             # meqn
-
-     ghost_patch_pack_area = T
-
 # Diagnostics and debugging
-     check_conservation = F
-     run_diagnostics = F
-     trapfpe = F          # trap floating point exceptions
-     mpi_debug = F
+     trapfpe = T                 # Trap floating point errors.
+     mpi_debug = F               # Attach mpi processes in gdb
+     conservation-check = F
+     run-user-diagnostics = F
 
 # File and console IO
 
      verbosity = essential        # verbose
-     serialout = T
+     output = T
+
+     # -----------
+     # Tikz output 
+     # -----------
+     tikz-out = F
+     tikz-figsize = 4 4 
+     tikz-plot-prefix = 'plot'
+     tikz-plot-suffix = 'png'
 
 # Mapping options
      manifold = T         # Manifold
@@ -88,6 +88,11 @@
      mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
+     # output
+     ascii-out = T
+     vtk-out = F
+
+
 [clawpack5]
      claw_verbosity = 0
      order  = 2 2         # normal and transverse order
@@ -98,3 +103,8 @@
      mwaves = 1           # mwaves
      mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+
+     # output
+     ascii-out = T
+     vtk-out = F
+
