(swirl) Minor update

--- a/applications/advection/2d/torus/fclaw_options.ini
+++ b/applications/advection/2d/torus/fclaw_options.ini
@@ -8,11 +8,13 @@
 # -----------------------------------------------------------
 
 [clawpatch]
-# Grid dimensions
+     # Grid dimensions
      mx = 8               # Interior dimensions of each grid
      my = 8		      #
      mbc = 2              # Number of ghost cells.
      maux = 3
+
+     meqn = 1
 
 [Options]
 # Regridding options
@@ -50,7 +52,6 @@
      run-user-diagnostics = F
 
 # File and console IO
-
      verbosity = essential        # verbose
      output = T
 
