--- a/applications/advection/2d/replicated/fclaw_options.ini
+++ b/applications/advection/2d/replicated/fclaw_options.ini
@@ -2,28 +2,36 @@
 # A periodic example that uses [ax,bx]x[ay,by]
 # -----------------------------------------------------------
 [user]
-     example = 0          # A periodic
      claw-version = 4
-     replicate-factor = 4  # Set to -1 to use --mi, --mj (below)
+     replicate-factor = 2  # Set to -1 to use --mi, --mj (below)
 
 # -----------------------------------------------------------
 # Basic ForestClaw options
 # -----------------------------------------------------------
+[clawpatch]
+     # Grid dimensions
+     mx = 32               # mx_leaf
+     my = 32               # my_leaf
+     mbc = 2              # Number of ghost cells
+
+     maux = 3    # Auxilliary data (kappa, u, v)
+
+     # Equations and boundary conditions
+     meqn = 1             # Number of equations
+
+
 [Options]
 
-# Grid dimensions
-     mx = 8               # Interior dimensions of each grid
-     my = 8		  #
-     mbc = 2              # Number of ghost cells.
-
-# Regridding options
-     minlevel = 0               # Minimum level
+     # Regridding options
+     minlevel = 2               # Minimum level
      maxlevel = 4               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.01
+     smooth-refine = F
+     smooth-level = 4
 
-# Time stepping
+     # Time stepping
      tfinal = 4.0         #
      initial_dt = 0.05    # Initial time step for 'minlevel'
 
@@ -37,12 +45,6 @@
 
      subcycle =  F        # subcycle in time ( = T or F).
 
-# Equation and boundary conditions
-     meqn = 1             # meqn
-     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
-
-     ghost_patch_pack_area = T
-
 # Diagnostics and debugging
      conservation-check = F
      run-user-diagnostics = F
@@ -52,7 +54,7 @@
 # File and console IO
 
      verbosity = essential        # verbose
-     serialout = T
+     output = T
 
 # Mapping options
      manifold = F         # Manifold
@@ -79,6 +81,11 @@
 
      mwaves = 1           # mwaves
      mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+
+     # output
+     ascii-out = T
+     vtk-out = F     
 
 [clawpack5]
      claw_verbosity = 0
@@ -89,3 +96,9 @@
 
      mwaves = 1           # mwaves
      mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+
+     # output
+     ascii-out = T
+     vtk-out = F
+
