--- a/applications/advection/2d/hemisphere/fclaw_options.ini
+++ b/applications/advection/2d/hemisphere/fclaw_options.ini
@@ -3,18 +3,25 @@
      alpha = 0.4
      claw-version = 4
 
-[Options]
+[clawpatch]
+     # Grid dimensions
      mx = 8               # mx_leaf
      my = 8               # my_leaf
-     mbc = 2              # mbc
+     mbc = 2              # Number of ghost cells
 
+     maux = 3             # Auxilliary arrays (needed by Clawpack solvers)
+
+     # Equations and boundary conditions
+     meqn = 1             # Number of equations
+
+[Options]
      minlevel = 0         # Minimum level
      maxlevel = 4        # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      smooth-refine = T
      smooth-level = 1
 
-# Time stepping
+     # Time stepping
      tfinal = 5.0         #
      use_fixed_dt = F     # Take a fixed time step
      initial_dt = 0.02    # Initial time step for 'minlevel'
@@ -27,20 +34,16 @@
 
      subcycle = T         # subcycle in time ( = T or F).
 
-
 # File and console IO
      verbosity = essential        # verbose
-     serialout = T        # Set this to F for parallel runs.  T is dead slow.
+     output = T        # Set this to F for parallel runs.  T is dead slow.
 
 # Debugging options
      trapfpe = F          # Trap floating point exceptions
      mpi_debug = F
-     check_conservation = F
-     run_diagnostics = F
-
-# Equations
-     meqn = 1             # meqn
-     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+     conservation-check = F
+     run-user-diagnostics = F
+     compute-error = F
 
 # Mapping
      manifold = T         # Manifold
@@ -62,6 +65,12 @@
 
      mwaves = 1           # mwaves
      mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+
+     # output
+     ascii-out = T
+     vtk-out = F
+
 
 [clawpack5]
      order  = 2 2         # normal and transverse order
@@ -71,3 +80,10 @@
 
      mwaves = 1           # mwaves
      mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+
+     # output
+     ascii-out = T
+     vtk-out = F
+
+
