(sphere) Update to use global struct, new header style

--- a/applications/advection/2d/sphere/fclaw_options.ini
+++ b/applications/advection/2d/sphere/fclaw_options.ini
@@ -3,11 +3,21 @@
      revs-per-second = 0.5          # Rigid body rotation
      claw-version = 4
 
-[Options]
+[clawpatch]
+     # Grid dimensions
      mx = 8               # mx_leaf
      my = 8               # my_leaf
+     mbc = 2              # Number of ghost cells
 
-# Regridding
+     maux = 3             # Auxilliary arrays (needed by Clawpack solvers)
+
+     # Equations and boundary conditions
+     meqn = 1             # Number of equations
+
+
+[Options]
+
+     # Regridding
      minlevel = 0             # Minimum level
      maxlevel = 5             # Maximum levels of refinement
      regrid_interval = 1      # Regrid every 'regrid_interval' time steps.
@@ -30,26 +40,21 @@
 
      subcycle = T             # subcycle in time ( = T or F).
 
-# Output
-     serialout = T            # Set this to F for parallel runs.  T is dead slow.
-     vtkout = F
+# Output     
+     verbosity = essential    # verbose
+     output = T            # Set this to F for parallel runs.  T is dead slow.
 
 # Diagnostics and debugging
-     verbosity = essential    # verbose
      trapfpe = T              # Trap floating point exceptions
      mpi_debug = F
      conservation-check = F
-
-# Equations
-     meqn = 1             # meqn
-     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
-     mbc = 2              # mbc
-
+     run-user-diagnostics = F
+     compute-error = F
 
 # Mapping
      manifold = T         # Manifold
 
-     theta = -30           # Rotation angles (degrees)
+     theta = -30          # Rotation angles (degrees)
      phi = -50            # Rotation angle
 
      scale = 1 1 1
@@ -63,6 +68,12 @@
 
      mwaves = 1           # mwaves
      mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+
+     # output
+     ascii-out = T
+     vtk-out = F
+
 
 [clawpack5]
      order  = 2 2         # normal and transverse order
@@ -72,3 +83,10 @@
 
      mwaves = 1           # mwaves
      mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+
+     # output
+     ascii-out = T
+     vtk-out = F
+
+
