Misc. updates to header files, etc

--- a/Makefile.apps
+++ b/Makefile.apps
@@ -25,15 +25,16 @@ endif
 
 # Scalar advection on manifolds
 include applications/advection/2d/swirl/Makefile.am
-#include applications/advection/2d/torus/Makefile.am
-#include applications/advection/2d/torthem/Makefile.am
-#include applications/advection/2d/annulus/Makefile.am
-#include applications/advection/2d/filament/Makefile.am
-#include applications/advection/2d/latlong/Makefile.am
-#include applications/advection/2d/replicated/Makefile.am
-#include applications/advection/2d/hemisphere/Makefile.am
-#include applications/advection/2d/disk/Makefile.am
-#include applications/advection/2d/sphere/Makefile.am
+include applications/advection/2d/filament/Makefile.am
+include applications/advection/2d/annulus/Makefile.am
+include applications/advection/2d/latlong/Makefile.am
+include applications/advection/2d/disk/Makefile.am
+include applications/advection/2d/torus/Makefile.am
+include applications/advection/2d/replicated/Makefile.am
+include applications/advection/2d/hemisphere/Makefile.am
+include applications/advection/2d/sphere/Makefile.am
+include applications/advection/2d/torthem/Makefile.am
+
 
 # NCAR Transport problems on the sphere
 #include applications/NCAR_transport/gaussian/Makefile.am
