--- a/applications/NCAR_transport/gaussian/Makefile.am
+++ b/applications/NCAR_transport/gaussian/Makefile.am
@@ -5,10 +5,8 @@ bin_PROGRAMS += applications/NCAR_transport/gaussian/gaussian
 include_HEADERS += applications/NCAR_transport/gaussian/gaussian_user.h
 
 applications_NCAR_transport_gaussian_gaussian_SOURCES = \
-	applications/NCAR_transport/gaussian/gaussian_user.cpp \
 	applications/NCAR_transport/gaussian/gaussian.cpp \
-	applications/NCAR_transport/gaussian/fclaw2d_map_cubedsphere.c \
-	applications/NCAR_transport/gaussian/fclaw2d_map_pillowsphere.c \
+	applications/NCAR_transport/gaussian/gaussian_user.cpp \
 	applications/NCAR_transport/gaussian/setprob.f \
 	applications/NCAR_transport/gaussian/user_4.6/qinit.f \
 	applications/NCAR_transport/gaussian/user_5.0/qinit.f90 \
@@ -19,8 +17,14 @@ applications_NCAR_transport_gaussian_gaussian_SOURCES = \
 	applications/NCAR_transport/all/velocity_wind.f \
 	applications/NCAR_transport/all/gaussian.f \
 	applications/NCAR_transport/all/transport_user.h \
+	applications/NCAR_transport/all/transport_user.cpp \
+	applications/NCAR_transport/all/transport_options.h \
+	applications/NCAR_transport/all/transport_domain.c \
+	applications/NCAR_transport/all/transport_options.c \
 	applications/NCAR_transport/all/user46_b4step2_manifold.f \
 	applications/NCAR_transport/all/user5_b4step2_manifold.f90 \
+	applications/NCAR_transport/all/fclaw2d_map_cubedsphere.c \
+	applications/NCAR_transport/all/fclaw2d_map_pillowsphere.c \
 	applications/advection/2d/all/user46_setaux_manifold.f \
 	applications/advection/2d/all/user5_setaux_manifold.f90 \
 	applications/advection/2d/all/clawpack46_rpn2adv_manifold.f \
