--- a/applications/NCAR_transport/gaussian/fclaw_options.ini
+++ b/applications/NCAR_transport/gaussian/fclaw_options.ini
@@ -1,21 +1,25 @@
 [user]
-     example = 1          # 1 = cubedsphere;  2 = pillowsphere
+     example = 0          # 0 = cubedsphere;  1 = pillowsphere
      kappa = 2
      claw-version = 4
 
-[Options]
-
-# Grid dimensions
+[clawpatch]
+     # Grid dimensions
      mx = 8               # mx_leaf
      my = 8               # my_leaf
-     mbc = 2              # mbc
+     mbc = 2              # Number of ghost cells
+     maux = 3
 
-# Equations
-     meqn = 1             # meqn
+     # Equations and boundary conditions
+     meqn = 1             # Number of equations
 
-# Refinement
-     minlevel = 0         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+
+
+[Options]
+
+     # Refinement
+     minlevel = 2         # Minimum level
+     maxlevel = 2         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.01
      coarsen_threshold = 0.001
@@ -40,7 +44,7 @@
 
 # Console and file IO
      verbosity = essential        # verbose
-     serialout = T        # Set this to F for parallel runs.  T is dead slow.
+     output = T        # Set this to F for parallel runs.  T is dead slow.
 
 # Debugging adn diagnostics
      trapfpe = T          # Trap floating point exceptions
@@ -66,6 +70,12 @@
 
      mwaves = 1           # mwaves
      mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
+
+     # output
+     ascii-out = T
+     vtk-out = F
+
 
 [clawpack5]
      order  = 2 2         # normal and transverse order
@@ -75,3 +85,9 @@
 
      mwaves = 1           # mwaves
      mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
+
+     # output
+     ascii-out = T
+     vtk-out = F
+
