--- a/applications/NCAR_transport/slotted_disk/fclaw_options.ini
+++ b/applications/NCAR_transport/slotted_disk/fclaw_options.ini
@@ -1,17 +1,22 @@
 [user]
-     example = 1          # 1 = cubedsphere;  2 = pillowsphere
+     example = 0          # 0 = cubedsphere;  1 = pillowsphere
      kappa = 2.0
      claw-version=4
 
+[clawpatch]
+     # Grid dimensions
+     mx = 8               # mx_leaf
+     my = 8               # my_leaf
+     mbc = 2              # Number of ghost cells
+     maux = 3
+
+     # Equations and boundary conditions
+     meqn = 1             # Number of equations
+
+
+
+
 [Options]
-
-# Grid dimensions
-     mx = 32               # mx_leaf
-     my = 32               # my_leaf
-     mbc = 2              # mbc
-
-# Equations
-     meqn = 1             # meqn
 
 # Refinement
      minlevel = 2         # Minimum level
@@ -31,22 +36,21 @@
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 1            # Used for all three out styles;  has different meaning, though.
+     nout = 20            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = T         # subcycle in time ( = T or F).
 
 # Console and file IO
-     verbosity = production        # verbose
-     serialout = T        # Set this to F for parallel runs.  T is dead slow.
+     verbosity = essential        # verbose
+     output = T        # Set this to F for parallel runs.  T is dead slow.
 
 # Debugging adn diagnostics
      trapfpe = F          # Trap floating point exceptions
      mpi_debug = F
-     check_conservation = F
-     run_diagnostics = F
-
-     ghost_patch_pack_area = T
+     conservation-check = F
+     run-user-diagnostics = F
+     compute-error = F
 
 # Mapping
      manifold = T         # Manifold
@@ -65,6 +69,11 @@
 
      mwaves = 1           # mwaves
      mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
+
+     # output
+     ascii-out = T
+     vtk-out = F
 
 [clawpack5]
      order  = 2 2         # normal and transverse order
@@ -74,3 +83,8 @@
 
      mwaves = 1           # mwaves
      mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
+
+     # output
+     ascii-out = T
+     vtk-out = F
