--- a/applications/NCAR_transport/correlatedcb/Makefile.am
+++ b/applications/NCAR_transport/correlatedcb/Makefile.am
@@ -19,6 +19,11 @@ applications_NCAR_transport_correlatedcb_correlatedcb_SOURCES = \
 	applications/NCAR_transport/correlatedcb/user_5.0/tag4coarsening.f \
 	applications/NCAR_transport/all/velocity_wind.f \
 	applications/NCAR_transport/all/gaussian.f \
+	applications/NCAR_transport/all/transport_user.h \
+	applications/NCAR_transport/all/transport_user.cpp \
+	applications/NCAR_transport/all/transport_options.h \
+	applications/NCAR_transport/all/transport_domain.c \
+	applications/NCAR_transport/all/transport_options.c \
 	applications/NCAR_transport/all/user46_b4step2_manifold.f \
 	applications/NCAR_transport/all/user5_b4step2_manifold.f90 \
 	applications/advection/2d/all/user46_setaux_manifold.f \
