--- a/applications/NCAR_transport/correlatedcb/fclaw_options.ini
+++ b/applications/NCAR_transport/correlatedcb/fclaw_options.ini
@@ -1,21 +1,24 @@
 [user]
-     example = 1          # 1 = cubedsphere; 2 = pillowcase
+     example = 0          # 0 = cubedsphere; 1 = pillowcase
      kappa = 2.0
      claw-version = 4
 
-[Options]
-
-# Grid dimensions
+[clawpatch]
+     # Grid dimensions
      mx = 8               # mx_leaf
      my = 8               # my_leaf
-     mbc = 2              # mbc
+     mbc = 2              # Number of ghost cells
+     maux = 3
 
-# Equations
-     meqn = 1             # meqn
+     # Equations and boundary conditions
+     meqn = 1             # Number of equations
 
-# Refinement
+
+[Options]
+
+     # Refinement
      minlevel = 0        # Minimum level needs to be resolved enough
-     maxlevel = 6
+     maxlevel = 3
      regrid_interval = 1
 
      refine_threshold = 0.01
@@ -27,7 +30,7 @@
      init_ghost = F
 
 # Time stepping
-     tfinal = 5.0         #
+     tfinal = 2.0         #
      use_fixed_dt = F     # Take a fixed time step
      initial_dt = 0.02    # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
@@ -41,7 +44,7 @@
 
 # Console and file IO
      verbosity = essential        # verbose
-     serialout = T        # Set this to F for parallel runs.  T is dead slow.
+     output = T        # Set this to F for parallel runs.  T is dead slow.
 
 
 # Debugging adn diagnostics
@@ -68,6 +71,12 @@
 
      mwaves = 1           # mwaves
      mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
+
+     # output
+     ascii-out = T
+     vtk-out = F
+
 
 [clawpack5]
      order  = 2 2         # normal and transverse order
@@ -77,3 +86,9 @@
 
      mwaves = 1           # mwaves
      mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
+
+     # output
+     ascii-out = T
+     vtk-out = F
+
