--- a/applications/advection/2d/adv_order3/fclaw_options.ini
+++ b/applications/advection/2d/adv_order3/fclaw_options.ini
@@ -20,7 +20,7 @@
      # ---------------------------
 
      minlevel = 2         # Minimum level
-     maxlevel = 6         # Maximum levels of refinement
+     maxlevel = 4         # Maximum levels of refinement
 
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.5
@@ -78,7 +78,10 @@
      ax = 0
      bx = 1
      ay = 0
-     by = 1
+     by = 1 
+
+     periodic_x = T
+     periodic_y = T
 
 
 [clawpack46]
