(adv_order3) Change name of main routines

--- a/applications/advection/2d/adv_order3/fclaw_options.ini
+++ b/applications/advection/2d/adv_order3/fclaw_options.ini
@@ -68,6 +68,7 @@
      conservation-check = F
      run-user-diagnostics = F
      compute-error = F
+     report-timing = F
 
      # -------
      # Mapping
