(NCAR transport) Minor updates

--- a/applications/NCAR_transport/slotted_disk/Makefile.am
+++ b/applications/NCAR_transport/slotted_disk/Makefile.am
@@ -27,6 +27,8 @@ applications_NCAR_transport_slotted_disk_slotted_disk_SOURCES = \
 	applications/NCAR_transport/all/transport_options.c \
 	applications/NCAR_transport/all/user46_b4step2_manifold.f \
 	applications/NCAR_transport/all/user5_b4step2_manifold.f90 \
+	applications/NCAR_transport/all/fclaw2d_map_cubedsphere.c \
+	applications/NCAR_transport/all/fclaw2d_map_pillowsphere.c \
 	applications/advection/2d/all/user46_setaux_manifold.f \
 	applications/advection/2d/all/user5_setaux_manifold.f90 \
 	applications/advection/2d/all/clawpack46_rpn2adv_manifold.f \
