(radial) Update to include global; new header style

--- a/applications/amrclaw/acoustics/2d/radial/example1.ini
+++ b/applications/amrclaw/acoustics/2d/radial/example1.ini
@@ -1,11 +1,15 @@
 [user]
     example = 1
+    claw-version = 5
+
     alpha =  0.4
 
-[Options]
+[clawpatch]
+    mx = 8
+    my = 8
+    maux = 9
 
-     mx = 8
-     my = 8
+[Options]
      minlevel = 2               # Minimum level
      maxlevel = 5               # Maximum levels of refinement
      smooth-refine = T
@@ -16,8 +20,6 @@
 
 [clawpack46]
      mcapa = 7            # mcapa
-     maux = 9             # maux
 
 [clawpack5]
      mcapa = 7            # mcapa
-     maux = 9             # maux
