--- a/applications/amrclaw/acoustics/2d/radial/fclaw_options.ini
+++ b/applications/amrclaw/acoustics/2d/radial/fclaw_options.ini
@@ -1,53 +1,66 @@
 [user]
      example = 0
+     claw-version = 4
+
      rho = 1
      bulk = 4
-     claw-version = 4
+
+
+[clawpatch]
+     # Grid dimensions
+     mx = 16               # mx_leaf
+     my = 16               # my_leaf
+     mbc = 2              # Number of ghost cells
+     maux = 0
+
+     # Equations and boundary conditions
+     meqn = 3             # Number of equations
 
 [Options]
 
-# Grids
-     mx = 8
-     my = 8
-     mbc = 2
-
-# Regridding information
+     # Regridding information
      minlevel = 2               # Minimum level
      maxlevel = 6               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.5
      coarsen_threshold = 0.25
-     smooth-refine=T
+     smooth-refine = T
      smooth-level = 5
      coarsen-delay=0
 
 # Time stepping
      tfinal = 0.6
-     initial_dt = 0.01          # Initial time step for 'minlevel'
+     initial_dt = 0.01    # Initial time step for 'minlevel'
 
-     use_fixed_dt = F            # Take a fixed time step
+     use_fixed_dt = F     # Take a fixed time step
      max_cfl = 1.0
      desired_cfl = 0.9
 
-     outstyle = 1                # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 12                    # Used for all three out styles
-     nstep = 1                   # Only used if outstyle is 3
+     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     nout = 12            # Used for all three out styles
+     nstep = 1            # Only used if outstyle is 3
 
-     subcycle = T                # subcycle in time ( = T or F).
+     subcycle = T         # subcycle in time ( = T or F).
 
 # File and console IO
-     verbosity = essential      # verbose
-     serialout = T               # ascii output
+     verbosity = essential    # verbose
+     output = T               # See clawpack options, below
+     report-timing = T
+
+     # -----------
+     # Tikz output 
+     # -----------
+     tikz-out = F
+     tikz-figsize = 4 4 
+     tikz-plot-prefix = 'plot'
+     tikz-plot-suffix = 'png'
 
 # Debugging and diagnostics
      trapfpe = T
      mpi_debug = F
-     run-user-diagnostics = F
      conservation-check = F
-
-# Equations and boundary conditions
-     meqn = 3             # meqn
-     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+     run-user-diagnostics = F
+     compute-error = F
 
 # Mapping and topology
      manifold = F         # Manifold
@@ -59,19 +72,28 @@
      by = 1
 
 [clawpack46]
-     order  = 2 2         # normal and transverse order
-     mcapa = 0            # mcapa
-     maux = 0             # maux
-     src_term = 0         # src_term
+     order  = 2 2       # normal and transverse order
+     mcapa = 0          # mcapa
+     src_term = 0       # src_term
 
-     mwaves = 2           # mwaves
-     mthlim = 3 3     # mthlim (is a vector in general, with 'mwaves' entries)
+     mwaves = 2         # mwaves
+     mthlim = 3 3       # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1    # mthbc(1) (left edge), etc.
+
+     # output
+     ascii-out = T
+     vtk-out = F
 
 [clawpack5]
-     order  = 2 2         # normal and transverse order
-     mcapa = 0            # mcapa
-     maux = 0             # maux
-     src_term = 0         # src_term
+     order  = 2 2       # normal and transverse order
+     mcapa = 0          # mcapa
+     src_term = 0       # src_term
 
-     mwaves = 2           # mwaves
-     mthlim = 3 3     # mthlim (is a vector in general, with 'mwaves' entries)
+     mwaves = 2         # mwaves
+     mthlim = 3 3       # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1    # mthbc(1) (left edge), etc.
+
+     # output
+     ascii-out = T
+     vtk-out = F
+
