(radialdam) Update SWE example; use new header style

--- a/applications/amrclaw/shallow/2d/radialdam/fclaw_options.ini
+++ b/applications/amrclaw/shallow/2d/radialdam/fclaw_options.ini
@@ -9,17 +9,21 @@
       hin = 2.0
       hout = 1.0
 
+[clawpatch]
+     # Grid dimensions
+     mx = 16               # mx_leaf
+     my = 16               # my_leaf
+     mbc = 2              # Number of ghost cells
+     maux = 0
+
+     meqn = 3             # Number of equations
 
 [Options]
-
-# Grids
-     mx = 16
-     my = 16
-     mbc = 2
 
 # Regridding information
      minlevel = 1               # Minimum level
      maxlevel = 5               # Maximum levels of refinement
+
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.5
      coarsen_threshold = 0.25
@@ -29,7 +33,7 @@
 
 # Time stepping
      tfinal = 1.5
-     initial_dt = 0.1          # Initial time step for 'minlevel'
+     initial_dt = 0.1            # Initial time step for 'minlevel'
 
      use_fixed_dt = F            # Take a fixed time step
      max_cfl = 1.0
@@ -42,18 +46,15 @@
      subcycle = T                # subcycle in time ( = T or F).
 
 # File and console IO
-     verbosity = essential      # verbose
-     serialout = T               # ascii output
+     verbosity = production      # verbose
+     output = T                  # ascii output
+     report-timing = F
 
 # Debugging and diagnostics
      trapfpe = T
      mpi_debug = F
      run-user-diagnostics = F
      conservation-check = F
-
-# Equations and boundary conditions
-     meqn = 3             # meqn
-     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
 # Mapping and topology
      manifold = F         # Manifold
@@ -67,17 +68,26 @@
 [clawpack46]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
-     maux = 0             # maux
      src_term = 0         # src_term
 
      mwaves = 3           # mwaves
      mthlim = 4 4 4     # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+
+     # output
+     ascii-out = T
+     vtk-out = F
 
 [clawpack5]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
-     maux = 0             # maux
      src_term = 0         # src_term
 
      mwaves = 3           # mwaves
      mthlim = 4 4 4     # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+
+     # output
+     ascii-out = T
+     vtk-out = F
+
