UPdate list of executables to build

--- a/Makefile.apps
+++ b/Makefile.apps
@@ -26,22 +26,20 @@ endif
 #include applications/advection/2d/hemisphere/Makefile.am
 #include applications/advection/2d/sphere/Makefile.am
 
-include applications/advection/2d/adv_order3/Makefile.am
-
 # NCAR Transport problems on the sphere
 #include applications/NCAR_transport/gaussian/Makefile.am
 #include applications/NCAR_transport/slotted_disk/Makefile.am
 #include applications/NCAR_transport/correlatedcb/Makefile.am
 
 # AMRClaw examples from Clawpack/AMRClaw
-#include applications/amrclaw/acoustics/2d/radial/Makefile.am
+include applications/amrclaw/acoustics/2d/radial/Makefile.am
+include applications/amrclaw/acoustics/2d/interface/Makefile.am
+include applications/amrclaw/burgers/2d/pwconst/Makefile.am
+include applications/amrclaw/shallow/2d/radialdam/Makefile.am
+include applications/amrclaw/euler/2d/shockbubble/Makefile.am
+include applications/amrclaw/euler/2d/quadrants/Makefile.am
 
-#include applications/amrclaw/acoustics/2d/interface/Makefile.am
 #include applications/amrclaw/advection/2d/swirl/Makefile.am
-#include applications/amrclaw/burgers/2d/pwconst/Makefile.am
-#include applications/amrclaw/shallow/2d/radialdam/Makefile.am
-#include applications/amrclaw/euler/2d/quadrants/Makefile.am
-#include applications/amrclaw/euler/2d/shockbubble/Makefile.am
 
 # GeoClaw examples
 if FCLAW_ENABLE_GEOCLAW
@@ -54,6 +52,10 @@ endif
 # -------------- Under construction ------------------
 #  These are not guaranteed to compile
 # ----------------------------------------------------
+
+# Third order scalar advection
+#include applications/advection/2d/adv_order3/Makefile.am
+
 # Euler example
 #include applications/euler/2d/quadrants/Makefile.am
 
