(amrclaw/swirl) Update to use new 'global', new header style

--- a/applications/amrclaw/advection/2d/swirl/fclaw_options.ini
+++ b/applications/amrclaw/advection/2d/swirl/fclaw_options.ini
@@ -3,14 +3,22 @@
      tperiod = 4.0
      claw-version = 4
 
-[Options]
 
-# Grid dimensions
+[clawpatch]
+     # Grid dimensions
      mx = 8		      # mx_leaf
      my = 8               # my_leaf
      mbc = 2              # Number of ghost cells
+     maux = 3
 
-# Dynamic gridding parameters
+     # Equations and boundary conditions
+     meqn = 1             # Number of equations
+
+[Options]
+     # ---------------------------
+     # Dynamic gridding parameters     
+     # ---------------------------
+
      minlevel = 2         # Minimum level
      maxlevel = 6         # Maximum levels of refinement
 
@@ -21,7 +29,9 @@
      smooth-refine = T
      refine-level = 5
 
-# Time stepping
+     # --------------
+     # Time stepping
+     # --------------
      tfinal = 4.0         #  Final time
 
      use_fixed_dt = F     # Take a fixed time step
@@ -36,22 +46,32 @@
 
      subcycle = T         # subcycle in time ( = T or F).
 
-# File and console IO
-     verbosity = essential        # verbose
-     serialout = T
+     # -------------------
+     # File and console IO
+     # -------------------
+     verbosity = essential        
+     output = T
 
-# Diagnostics and debugging
+     # -----------
+     # Tikz output 
+     # -----------
+     tikz-out = F
+     tikz-figsize = 4 4 
+     tikz-plot-prefix = 'plot'
+     tikz-plot-suffix = 'png'
+
+     # -------------------------
+     # Diagnostics and debugging
+     # -------------------------
      trapfpe = T                 # Trap floating point errors.
      mpi_debug = F               # Attach mpi processes in gdb
      conservation-check = F
      run-user-diagnostics = F
      compute-error = F
 
-# Equations and boundary conditions
-     meqn = 1             # Number of equations
-     mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
-
-# Mapping
+     # -------
+     # Mapping
+     # -------
      manifold = F         # Manifold
 
      # Domain dimensions - used only if manifold = F
@@ -69,6 +89,12 @@
 
      mwaves = 1           # mwaves
      mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
+
+     # output
+     ascii-out = T
+     vtk-out = F
+
 
 [clawpack5]
      order  = 2 2         # normal and transverse order
@@ -78,3 +104,10 @@
 
      mwaves = 1           # mwaves
      mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
+
+     # output
+     ascii-out = T
+     vtk-out = F
+
+
