(quadrants,ini) Minor update

--- a/applications/amrclaw/euler/2d/quadrants/fclaw_options.ini
+++ b/applications/amrclaw/euler/2d/quadrants/fclaw_options.ini
@@ -1,6 +1,6 @@
 [user]
     gamma = 1.4
-    claw-version = 5
+    claw-version = 4
 
 [clawpatch]
      # Grid dimensions
@@ -44,7 +44,7 @@
      # -----------
      # Tikz output 
      # -----------
-     tikz-out = T
+     tikz-out = F
      tikz-figsize = 4 4 
      tikz-plot-prefix = 'plot'
      tikz-plot-suffix = 'png'
@@ -75,8 +75,8 @@
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
      # output
-     ascii-out = T
-     vtk-out = F
+     ascii-out = F
+     vtk-out = T
 
 [clawpack5]
      order  = 2 2         # normal and transverse order
