--- a/Makefile.apps
+++ b/Makefile.apps
@@ -11,9 +11,9 @@ if FCLAW_ENABLE_GEOCLAW
 include src/solvers/fc2d_geoclaw/Makefile.am
 endif
 
-if FCLAW_ENABLE_ASH3D
-include src/solvers/fc3d_ash3d/Makefile.am
-endif
+## if FCLAW_ENABLE_ASH3D
+## include src/solvers/fc3d_ash3d/Makefile.am
+## endif
 
 # ----------------------------------
 # Applications
@@ -60,10 +60,10 @@ endif
 #  available
 # ----------------------------------------------------
 
-# Ash3d examples
-if FCLAW_ENABLE_ASH3D
-include src/solvers/fc3d_ash3d/test_cases/cloud_tester/Makefile.am
-endif
+## # Ash3d examples
+## if FCLAW_ENABLE_ASH3D
+## include src/solvers/fc3d_ash3d/test_cases/cloud_tester/Makefile.am
+## endif
 
 # Third order scalar advection
 #include applications/advection/2d/adv_order3/Makefile.am
