(shockbubble/ini files) Add tikz output to ini file

--- a/applications/amrclaw/euler/2d/shockbubble/fclaw_options.ini
+++ b/applications/amrclaw/euler/2d/shockbubble/fclaw_options.ini
@@ -51,6 +51,16 @@
      run-user-diagnostics = F
      conservation-check = F
 
+     # -----------
+     # Tikz output 
+     # -----------
+     tikz-out = F
+     tikz-figsize = 4 1 
+     tikz-plot-fig = T
+     tikz-plot-prefix = 'plot'
+     tikz-plot-suffix = 'png'
+
+
 # Debugging and diagnostics
      trapfpe = F
      mpi_debug = F
