(bowl_slosh) Updated Matlab routines;  Visclaw plotting still doesn't work

--- a/applications/geoclaw/bowl_slosh/fclaw_options.ini
+++ b/applications/geoclaw/bowl_slosh/fclaw_options.ini
@@ -40,7 +40,7 @@
      subcycle = F         # subcycle in time ( = T or F).
 
 # File and console IO
-     verbosity = production     # verbose
+     verbosity = essential     # verbose
      output = T
 
 # Diagnostics and debugging
