(geoclaw/chile2010) Updated example to latest headers, code

--- a/applications/geoclaw/chile2010/fclaw_options.ini
+++ b/applications/geoclaw/chile2010/fclaw_options.ini
@@ -1,15 +1,17 @@
 [user]
 	example = 0
-[Options]
 
-# Grid dimensions
-     mx = 16		      # mx_leaf
-     my = 16              # my_leaf
+[clawpatch]
+     # Grid dimensions
+     mx = 8               # mx_leaf
+     my = 8              # my_leaf
      mbc = 2              # Number of ghost cells
+     maux = 3
 
-# Ghost cells initialization
-     init_ghostcell = F   # Initialize ghost cells
+     meqn = 3             # Number of equations
 
+
+[Options]
 # Regridding information
      minlevel = 0         # Minimum level
      maxlevel = 5         # Maximum levels of refinement
@@ -43,7 +45,7 @@
 
 # File and console IO
      verbosity = essential     # verbose
-     serialout = T
+     output = T
 
 # Diagnostics and debugging
      trapfpe = F          # Trap floating point errors.
@@ -51,15 +53,8 @@
      conservation-check = F
      run-user-diagnostics = F
 
-# Ghost packing options for parallel communication
-
-
-# Equations and boundary conditions
-     meqn = 3             # Number of equations
-     mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
-
 # Mapping
-
+     
      # Domain dimensions
      ax = -120
      bx = -60
@@ -69,12 +64,12 @@
 [geoclaw]
      order  = 2 2         # normal and transverse order
      mcapa = 2            # mcapa
-     maux = 3             # maux
      mbathy = 1           # mbathy
      src_term = 1         # src_term
 
      mwaves = 3           # mwaves
      mthlim = 4 4 4       # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
 
 # Coarsening
      dry_tolerance_c = 1.e-3
@@ -82,5 +77,5 @@
      speed_tolerance_entries_c = 6
      speed_tolerance_c = 1e12 1e12 1e12 1e12 1e12 1e12
 
-# Parallel communication.  If we don't pack aux data, it will be recomputed
-     ghost_patch_pack_aux = F
+     # Output
+     ascii-out = T
