--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -114,6 +114,7 @@ libforestclaw_compiled_sources = \
 	src/mappings/torus/mapc2m_twisted_torus.f \
 	src/mappings/latlong/mapc2m_latlong.f \
 	src/mappings/pillowsphere/pillowsphere_corner_ghost.f \
+	src/mappings/fclaw2d_map_nomap.c \
 	src/mappings/fclaw2d_map_nomap_brick.c \
 	src/fortran_source2d/fclaw2d_metric_default_fort.f \
 	src/fortran_source2d/fclaw2d_interpolate_util.f \
