--- a/applications/geoclaw/flat_bathymetry/fclaw_options.ini
+++ b/applications/geoclaw/flat_bathymetry/fclaw_options.ini
@@ -1,20 +1,25 @@
 [user]
-     period = 4.0         # Periodicity of the flow field.
+     /* No user options */
+
+[clawpatch]
+     # Grid dimensions
+     mx = 8               # mx_leaf
+     my = 8              # my_leaf
+     mbc = 2              # Number of ghost cells
+     maux = 1
+
+     meqn = 3             # Number of equations
 
 [Options]
 
-# Grid dimensions
-     mx = 16		      # mx_leaf
-     my = 16              # my_leaf
-     mbc = 2              # Number of ghost cells
-
-# Regridding information
+     # Regridding information
      minlevel = 2         # Minimum level
      maxlevel = 6         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.05
-     smooth-refine = F
+     smooth-refine = T
+     smooth-level = 5
      coarsen-delay = 0
 
 # Time stepping
@@ -25,28 +30,24 @@
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 3         # 1 : Output steps  = tfinal/nout;
+     outstyle = 1         # 1 : Output steps  = tfinal/nout;
                           # 2 : not implemented;
                           # 3 : Take nout steps;  save files every nstep steps.
 
-     nout = 10            # Used for all three out styles;  has different meaning, though.
+     nout = 16            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = T         # subcycle in time ( = T or F).
 
 # File and console IO
-     verbosity = info        # verbose
-     serialout = T
+     verbosity = production        # verbose
+     output = T
 
 # Diagnostics and debugging
      trapfpe = T          # Trap floating point errors.
      mpi_debug = F        # Attach mpi processes in gdb
-     check_conservation = F
-     run_diagnostics = T
-
-# Equations and boundary conditions
-     meqn = 3             # Number of equations
-     mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
+     conservation-check = F
+     run-user-diagnostics = T
 
 # Mapping
      manifold = F         # Manifold
@@ -61,16 +62,21 @@
 [geoclaw]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
-     maux = 1             # maux
+     mbathy = 1           # mbathy
      src_term = 1         # src_term
 
      mwaves = 3           # mwaves
      mthlim = 4 4 4       # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
 
-# Coarsening
+     # Coarsening
      dry_tolerance_c = 0.0005
      wave_tolerance_c = 0.005     
      speed_tolerance_entries_c = 6
      speed_tolerance_c = 500000000000.0 500000000000.0 500000000000.0 500000000000.0 500000000000.0 500000000000.0
+
+     # Output
+     ascii-out = T
+
 
 
