(amrclaw apps) Update apps to handle quiet exit

--- a/applications/amrclaw/acoustics/2d/interface/fclaw_options.ini
+++ b/applications/amrclaw/acoustics/2d/interface/fclaw_options.ini
@@ -21,7 +21,7 @@
 
      # Regridding information
      minlevel = 2               # Minimum level
-     maxlevel = 5               # Maximum levels of refinement
+     maxlevel = 7               # Maximum levels of refinement
 
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.05
@@ -50,11 +50,11 @@
      output = T                  # ascii output
 
 # Debugging and diagnostics
-     trapfpe = T
+     trapfpe = F
      mpi_debug = F
      run-user-diagnostics = F
      conservation-check = F
-     report-timing = F
+     report-timing = T
 
 # Mapping and topology
      manifold = F         # Manifold
