--- a/applications/amrclaw/burgers/2d/pwconst/fclaw_options.ini
+++ b/applications/amrclaw/burgers/2d/pwconst/fclaw_options.ini
@@ -15,13 +15,13 @@
 
 # Regridding information
      minlevel = 2               # Minimum level
-     maxlevel = 6               # Maximum levels of refinement
+     maxlevel = 7               # Maximum levels of refinement
 
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_theshold = 0.25
      coarsen_threshold = 0.05
      smooth-refine = T
-     smooth-level = 5
+     smooth-level = 6
      coarsen-delay = 0
 
 # Time stepping
@@ -41,7 +41,7 @@
 # File and console IO
      verbosity = essential      # verbose
      output = T               # ascii output
-     report-timing = F
+     report-timing = T
 
 # Debugging and diagnostics
      trapfpe = T
