--- a/applications/amrclaw/shallow/2d/radialdam/fclaw_options.ini
+++ b/applications/amrclaw/shallow/2d/radialdam/fclaw_options.ini
@@ -11,8 +11,8 @@
 
 [clawpatch]
      # Grid dimensions
-     mx = 16               # mx_leaf
-     my = 16               # my_leaf
+     mx = 32               # mx_leaf
+     my = 32               # my_leaf
      mbc = 2              # Number of ghost cells
      maux = 0
 
@@ -48,7 +48,7 @@
 # File and console IO
      verbosity = production      # verbose
      output = T                  # ascii output
-     report-timing = F
+     report-timing = T
 
 # Debugging and diagnostics
      trapfpe = T
