--- a/applications/amrclaw/euler/2d/shockbubble/fclaw_options.ini
+++ b/applications/amrclaw/euler/2d/shockbubble/fclaw_options.ini
@@ -55,8 +55,8 @@
      # Tikz output 
      # -----------
      tikz-out = F
-     tikz-figsize = 4 1 
-     tikz-plot-fig = T
+     tikz-figsize = 1 1     # Each block is 1 in x 1 in ; Final figure is 4 in x 1 in
+     tikz-plot-fig = F      # Set to true if you have figure 'plot_0000.png' available.
      tikz-plot-prefix = 'plot'
      tikz-plot-suffix = 'png'
 
