Work on reorganizing makefiles for apps

--- a/Makefile.am
+++ b/Makefile.am
@@ -63,17 +63,16 @@ DISTCLEANFILES += \
         _configs.sed src/fclaw_config.h @FCLAW_DISTCLEAN@
 .PHONY: lint ChangeLog
 
-# ------------------------------------------------------------------
-# non-recursive build
+# --------------------- Solvers and examples ---------------------
+
+# --------------------------------------------
+# ForestClaw 
+# --------------------------------------------
 include src/Makefile.am
 
-# include src/solvers/amr_waveprop/Makefile.am
-#
-# include applications/dummy/Makefile.am
-# include applications/advection/2d/swirl/Makefile.am
-# include applications/advection/2d/hemisphere/Makefile.am
-
+# Examples
 include Makefile.apps
+
 # ------------------------------------------------------------------
 
 # revision control and ChangeLog
