(flatbathy) set init_ghostcell to True if we want to use python script to do the initialization

--- a/applications/geoclaw/flat_bathymetry/fclaw_options.ini
+++ b/applications/geoclaw/flat_bathymetry/fclaw_options.ini
@@ -47,6 +47,7 @@
      mpi_debug = F        # Attach mpi processes in gdb
      conservation-check = F
      run-user-diagnostics = T
+     init_ghostcell = T
 
 # Mapping
      manifold = F         # Manifold
