--- a/applications/clawpack/advection/2d/swirl_cons/fclaw_options.ini
+++ b/applications/clawpack/advection/2d/swirl_cons/fclaw_options.ini
@@ -5,8 +5,8 @@
 
 [clawpatch]
      # Grid dimensions
-     mx = 16		      # mx_leaf
-     my = 16               # my_leaf
+     mx = 64		      # mx_leaf
+     my = 64               # my_leaf
      mbc = 2              # Number of ghost cells
      maux = 3
 
@@ -48,7 +48,7 @@
      # -------------------
      # File and console IO
      # -------------------
-     verbosity = essential        
+     verbosity = production     
      output = T
 
      # -----------
@@ -67,6 +67,7 @@
      conservation-check = F
      run-user-diagnostics = F
      compute-error = F
+     report-timing = F
 
      # -------
      # Mapping
