--- a/applications/clawpack/advection/2d/swirl_cons/fclaw_options.ini
+++ b/applications/clawpack/advection/2d/swirl_cons/fclaw_options.ini
@@ -64,7 +64,7 @@
      # -------------------------
      trapfpe = T                 # Trap floating point errors.
      mpi_debug = F               # Attach mpi processes in gdb
-     conservation-check = F
+     conservation-check = T
      run-user-diagnostics = F
      compute-error = F
      report-timing = F
@@ -80,6 +80,9 @@
      ay = 0
      by = 1
 
+     periodic_x = T
+     periodic_y = T
+     init_ghostcell = T
 
 [clawpack46]
      order  = 2 2         # normal and transverse order
@@ -97,7 +100,7 @@
 
 
 [clawpack5]
-     order  = 2 2         # normal and transverse order
+     order  = 1 0         # normal and transverse order
      mcapa = 0            # mcapa
      maux = 2             # maux
      src_term = 0         # src_term
