rename files; add code for reading netcdf file

--- a/snippets/tst_netcdf_fileio/Makefile
+++ b/snippets/tst_netcdf_fileio/Makefile
@@ -1,7 +1,14 @@
-all:
-	mpicc -c main.c
-	mpicc -o main -O2 main.o -L/opt/local/lib -lnetcdf -lhdf5_hl -lhdf5 -lcurl
+read:
+	mpicc -c read_ncfile.c
+	mpicc -o read_ncfile -O2 read_ncfile.o -lnetcdf -lhdf5_hl -lhdf5 -lcurl
+
+write:
+	mpicc -c write_ncfile.c
+	mpicc -o write_ncfile -O2 write_ncfile.o -lnetcdf -lhdf5_hl -lhdf5 -lcurl
+
+.PHONY: all read_ncfile write_ncfile
 
 clean:
 	rm -f *.o
-	rm main
+	rm write_ncfile
+	rm read_ncfile
