--- a/applications/clawpack/euler/2d/shockbubble/Makefile.am
+++ b/applications/clawpack/euler/2d/shockbubble/Makefile.am
@@ -21,6 +21,7 @@ applications_clawpack_euler_2d_shockbubble_shockbubble_SOURCES = \
 	applications/clawpack/euler/2d/shockbubble/user_5.0/src2.f90 \
 	applications/clawpack/euler/2d/shockbubble/user_5.0/tag4coarsening.f90 \
 	applications/clawpack/euler/2d/shockbubble/user_5.0/tag4refinement.f90 \
+	applications/clawpack/euler/2d/rp/euler_user_fort.h \
 	applications/clawpack/euler/2d/rp/clawpack46_rpn2_euler4.f \
 	applications/clawpack/euler/2d/rp/clawpack46_rpt2_euler4.f \
 	applications/clawpack/euler/2d/rp/clawpack46_rpn2_euler5.f \
