WIP : Fix bug in filament example in 4.6 version of clawpack

--- a/applications/clawpack/advection/2d/filament/fclaw_options.ini
+++ b/applications/clawpack/advection/2d/filament/fclaw_options.ini
@@ -1,6 +1,6 @@
 [user]
      example = 0        # no mapping
-     claw-version = 5
+     claw-version = 4
 
 [clawpatch]
      # Grid dimensions
@@ -42,8 +42,9 @@
 # Diagnostics and debugging
      conservation-check = F
      run-user-diagnostics = F
-     trapfpe = T          # trap floating point exceptions
+     trapfpe = F          # trap floating point exceptions
      mpi_debug = F
+     report-timing = F
 
 # File and console IO
      verbosity = essential    # verbosity
