--- a/applications/clawpack/advection/2d/swirl/fclaw_options.ini
+++ b/applications/clawpack/advection/2d/swirl/fclaw_options.ini
@@ -1,7 +1,6 @@
 [user]
-     claw_version = 4         # Periodicity of the flow field.
+     claw_version = 5         # Periodicity of the flow field.
      tperiod = 4.0
-     claw-version = 4
 
 
 [clawpatch]
@@ -20,7 +19,7 @@
      # ---------------------------
 
      minlevel = 2         # Minimum level
-     maxlevel = 6         # Maximum levels of refinement
+     maxlevel = 2         # Maximum levels of refinement
 
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
@@ -39,9 +38,9 @@
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 1         # OutputStyle = 1,2,3
+     outstyle = 3         # OutputStyle = 1,2,3
 
-     nout = 16            # Used for all three out styles;  has different meaning, though.
+     nout = 2            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = T         # subcycle in time ( = T or F).
@@ -108,7 +107,8 @@
      mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
 
      # output
-     ascii-out = T
+     ascii-out = F
      vtk-out = F
+     netcdf-out = T
 
 
