--- a/applications/clawpack/advection/2d/swirl_cons/Makefile.am
+++ b/applications/clawpack/advection/2d/swirl_cons/Makefile.am
@@ -9,14 +9,14 @@ applications_clawpack_advection_2d_swirl_cons_swirlcons_SOURCES = \
 	applications/clawpack/advection/2d/swirl_cons/psi.f \
 	applications/clawpack/advection/2d/swirl_cons/setprob.f \
 	applications/clawpack/advection/2d/all/clawpack_user.h \
-	applications/clawpack/advection/2d/all/clawpack5_setaux.f90 \
+	applications/clawpack/advection/2d/all/clawpack_.h \
 	applications/clawpack/advection/2d/swirl_cons/user_4.6/qinit.f \
 	applications/clawpack/advection/2d/swirl_cons/user_4.6/clawpack46_setaux.f \
 	applications/clawpack/advection/2d/swirl_cons/user_4.6/swirlcons_b4step2.f \
 	applications/clawpack/advection/2d/swirl_cons/user_4.6/rpn2fwave.f \
 	applications/clawpack/advection/2d/swirl_cons/user_4.6/rpn2cons_new.f \
 	applications/clawpack/advection/2d/swirl_cons/user_4.6/rpn2cons_qstar.f \
-	applications/clawpack/advection/2d/swirl_cons/Riemann_solvers/rpt2cons_cc.f \
+	applications/clawpack/advection/2d/swirl_cons/user_4.6/rpt2cons_cc.f \
 	applications/clawpack/advection/2d/swirl_cons/swirlcons_bc2.f
 
 applications_clawpack_advection_2d_swirl_cons_swirlcons_CPPFLAGS = \
