(clawpack/advection/swirl (cons)) Update Matlab/ini files

--- a/applications/clawpack/advection/2d/swirl_cons/fclaw_options.ini
+++ b/applications/clawpack/advection/2d/swirl_cons/fclaw_options.ini
@@ -1,13 +1,16 @@
 [user]
-     tperiod = 4.0
+     period = 0.0
+     example = 3    
+
+     cons-rp = F 
+
      claw-version = 4
-     cons-rp = T
 
 
 [clawpatch]
      # Grid dimensions
-     mx = 16		      # mx_leaf
-     my = 16               # my_leaf
+     mx = 32		      # mx_leaf
+     my = 32              # my_leaf
      mbc = 2              # Number of ghost cells
      maux = 2
 
@@ -20,11 +23,11 @@
      # ---------------------------
 
      minlevel = 0         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     maxlevel = 0         # Maximum levels of refinement
 
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
-     coarsen_threshold = 0.01
+     coarsen_threshold = 0.9
 
      smooth-refine = T
      refine-level = 5
@@ -32,7 +35,7 @@
      # --------------
      # Time stepping
      # --------------
-     tfinal = 4.0         #  Final time
+     tfinal = 0.5         #  Final time
 
      use_fixed_dt = F     # Take a fixed time step
      initial_dt = 0.001   # Initial time step for 'minlevel'
@@ -41,7 +44,7 @@
 
      outstyle = 1         # OutputStyle = 1,2,3
 
-     nout = 16            # Used for all three out styles;  has different meaning, though.
+     nout = 10            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = T         # subcycle in time ( = T or F).
@@ -49,7 +52,7 @@
      # -------------------
      # File and console IO
      # -------------------
-     verbosity = production     
+     verbosity = essential     
      output = T
 
      # -----------
@@ -92,8 +95,10 @@
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
-     mthlim = 0           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthlim = 1           # mthlim (is a vector in general, with 'mwaves' entries)
      mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
+
+     use-fwaves = T
 
      # output
      ascii-out = T
