--- a/applications/clawpack/advection/2d/swirl/fclaw_options.ini
+++ b/applications/clawpack/advection/2d/swirl/fclaw_options.ini
@@ -1,5 +1,5 @@
 [user]
-     claw_version = 5         # Periodicity of the flow field.
+     claw-version = 5         # Periodicity of the flow field.
      tperiod = 4.0
 
 
@@ -19,7 +19,7 @@
      # ---------------------------
 
      minlevel = 2         # Minimum level
-     maxlevel = 2         # Maximum levels of refinement
+     maxlevel = 6         # Maximum levels of refinement
 
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
@@ -40,7 +40,7 @@
 
      outstyle = 3         # OutputStyle = 1,2,3
 
-     nout = 2            # Used for all three out styles;  has different meaning, though.
+     nout = 1            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = T         # subcycle in time ( = T or F).
