(clawpack/swirl (cons)) Simplified velocity field

--- a/applications/clawpack/advection/2d/swirl_cons/fclaw_options.ini
+++ b/applications/clawpack/advection/2d/swirl_cons/fclaw_options.ini
@@ -1,13 +1,16 @@
 [user]
-     period = 0.0
-     example = 3   
+     period = 4.0
+     example = 3 
+
+     rp-solver = 1    # 1-qstar; 2-WD; 3=EC; 4=f-wave
+
 
 [clawpatch]
      # Grid dimensions
-     mx = 32	         # mx_leaf
-     my = 32            # my_leaf
+     mx = 256	         # mx_leaf
+     my = 256            # my_leaf
      mbc = 2            # Number of ghost cells
-     maux = 4
+     maux = 2
 
      # Equations and boundary conditions
      meqn = 1             # Number of equations
@@ -30,24 +33,24 @@
      # --------------
      # Time stepping
      # --------------
-     tfinal = 0.4         #  Final time
+     tfinal = 0.25         #  Final time
 
-     use_fixed_dt = T     # Take a fixed time step
-     initial_dt = 1e-1   # Initial time step for 'minlevel'
+     use_fixed_dt = F     # Take a fixed time step
+     initial_dt = 1e-2   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 3         # OutputStyle = 1,2,3
+     outstyle = 1         # OutputStyle = 1,2,3
 
-     nout  = 4     
-     nstep = 4            # Only used if outstyle is 3
+     nout  = 10     
+     nstep = 1            # Only used if outstyle is 3
 
      subcycle = T         # subcycle in time ( = T or F).
 
      # -------------------
      # File and console IO
      # -------------------
-     verbosity = production    
+     verbosity = essential   
      output = T
 
      # -----------
@@ -86,17 +89,15 @@
 [clawpack46]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
-     maux = 2             # maux
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
      mthlim = 1           # mthlim (is a vector in general, with 'mwaves' entries)
      mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
 
-     use-fwaves = T
-
      # output
      ascii-out = T
      vtk-out = F
+
 
 
