(clawpack/swirl (cons)) add 2d example

--- a/applications/clawpack/advection/2d/swirl_cons/fclaw_options.ini
+++ b/applications/clawpack/advection/2d/swirl_cons/fclaw_options.ini
@@ -1,8 +1,6 @@
 [user]
-     period = 4.0
-     example = 3 
-
-     rp-solver = 1    # 1-qstar; 2-WD; 3=EC; 4=f-wave
+     example = 1 
+     rp-solver = 1    # 1-QS; 2-WD; 3=EC; 4=FW
 
 
 [clawpatch]
@@ -33,7 +31,7 @@
      # --------------
      # Time stepping
      # --------------
-     tfinal = 0.25         #  Final time
+     tfinal = 0.3         #  Final time (Ex 1 : 0.4;   Ex 2 : 0.3)
 
      use_fixed_dt = F     # Take a fixed time step
      initial_dt = 1e-2   # Initial time step for 'minlevel'
@@ -42,7 +40,7 @@
 
      outstyle = 1         # OutputStyle = 1,2,3
 
-     nout  = 10     
+     nout  = 1           # Number of output steps (Ex 1 : 15;  Ex 2 : 30)
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = T         # subcycle in time ( = T or F).
@@ -66,7 +64,7 @@
      # -------------------------
      trapfpe = T                 # Trap floating point errors.
      mpi_debug = F               # Attach mpi processes in gdb
-     conservation-check = T
+     conservation-check = F
      run-user-diagnostics = F
      compute-error = F
      report-timing = F
