--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-src/solvers/fc2d_clawpack4.6 linguist-vendored
-src/solvers/fc2d_clawpack5 linguist-vendored
+src/solvers/fc2d_clawpack4.6/* linguist-vendored
+src/solvers/fc2d_clawpack5/* linguist-vendored
+src/solvers/fc2d_geoclaw/*
